--- a/index.html
+++ b/index.html
@@ -14,36 +14,90 @@
     <script src="js/app.js" defer></script>
   </head>
   <body>
+    <a
+      class="logo"
+      href="https://www.stalker2.com/ua"
+      target="_blank"
+      rel="noopener noreferrer"
+      style="background-image: url(images/Logo.png)"
+    ></a>
     <!-- слайдер -->
     <div class="swiper slider">
       <!-- обгортка слайдера -->
       <!-- перший тег для слайдера, другий для стилізації -->
       <div class="swiper-wrapper slider__wrapper">
+        <!-- слайд 1 -->
         <div class="swiper-slide slider__item">
-          <!-- слайд 1 -->
           <div
-            class="slider__layer"
+            class="slider-layer"
+            data-swiper-parallax="30%"
             style="background-image: url(images/Laborant/01_Laborant.jpg)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="27%"
             style="background-image: url(images/Laborant/02_Laborant.png)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="20%"
             style="background-image: url(images/Laborant/03_Laborant.png)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="15%"
             style="background-image: url(images/Laborant/04_Laborant.png)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="0%"
             style="background-image: url(images/Laborant/05_Laborant.png)"
           ></div>
-
-          <!-- слайд 2 -->
+        </div>
+        <!-- слайд 2 -->
+        <div class="swiper-slide slider__item">
           <div
             class="slider-layer"
-            style="background-image: url(images/Cave/01_Cave.jpg)"
-            style="background-image: url(images/Cave/02_Cave.png)"
-            style="background-image: url(images/Cave/03_Cave.png)"
+            data-swiper-parallax="30%"
+            style="background-image: url(images/Gravi/01_Gravi.jpg)"
           ></div>
-
-          <!-- слайд 3 -->
           <div
             class="slider-layer"
+            data-swiper-parallax="27%"
+            style="background-image: url(images/Gravi/02_Gravi.png)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="23%"
+            style="background-image: url(images/Gravi/03_Gravi.png)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="0%"
+            style="background-image: url(images/Gravi/04_Gravi.png)"
+          ></div>
+        </div>
+
+        <!-- слайд 3 -->
+        <div class="swiper-slide slider__item">
+          <div
+            class="slider-layer"
+            data-swiper-parallax="50%"
             style="background-image: url(images/Blue/01_Blue.jpg)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="20%"
             style="background-image: url(images/Blue/02_Blue.png)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="25%"
             style="background-image: url(images/Blue/03_Blue.png)"
+          ></div>
+          <div
+            class="slider-layer"
+            data-swiper-parallax="0%"
             style="background-image: url(images/Blue/04_Blue.png)"
           ></div>
         </div>
@@ -51,3 +105,6 @@
     </div>
   </body>
 </html>
+
+<!-- кастомний курсор -->
+<!-- Музика -->
