--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             data-swiper-parallax="27%"
             style="background-image: url(images/Laborant/02_Laborant.png)"
           ></div>
+          <canvas
+            class="particles slider-layer"
+            data-color="#7c8f55"
+            data-swiper-parallax="24%"
+          ></canvas>
           <div
             class="slider-layer"
             data-swiper-parallax="20%"
@@ -66,6 +71,11 @@
             data-swiper-parallax="27%"
             style="background-image: url(images/Gravi/02_Gravi.png)"
           ></div>
+          <canvas
+            class="particles slider-layer"
+            data-color="#c8c8c8"
+            data-swiper-parallax="24%"
+          ></canvas>
           <div
             class="slider-layer"
             data-swiper-parallax="23%"
@@ -85,6 +95,11 @@
             data-swiper-parallax="50%"
             style="background-image: url(images/Blue/01_Blue.jpg)"
           ></div>
+          <canvas
+            class="particles slider-layer"
+            data-color="#c8c8c8"
+            data-swiper-parallax="24%"
+          ></canvas>
           <div
             class="slider-layer"
             data-swiper-parallax="20%"
