--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           ></div>
           <canvas
             class="particles slider-layer"
-            data-color="#c8c8c8"
+            data-color="#a31c1c"
             data-swiper-parallax="24%"
           ></canvas>
           <div
