--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       href="https://www.stalker2.com/ua"
       target="_blank"
       rel="noopener noreferrer"
-      style="background-image: url(images/Logo.png)"
     ></a>
     <audio preload="auto" id="audio" class="audio" loop>
       <source src="Audio/Sorokolit_Spase Vibration.mp3" type="audio/mpeg" />
@@ -40,93 +39,41 @@
       <div class="swiper-wrapper slider__wrapper">
         <!-- слайд 1 -->
         <div class="swiper-slide slider__item">
-          <div
-            class="slider-layer"
-            data-swiper-parallax="30%"
-            style="background-image: url(images/Laborant/01_Laborant.jpg)"
-          ></div>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="27%"
-            style="background-image: url(images/Laborant/02_Laborant.png)"
-          ></div>
+          <div class="slider-layer s1l1" data-swiper-parallax="30%"></div>
+          <div class="slider-layer s1l2" data-swiper-parallax="27%"></div>
           <canvas
             class="particles slider-layer"
             data-color="#7c8f55"
             data-swiper-parallax="24%"
           ></canvas>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="20%"
-            style="background-image: url(images/Laborant/03_Laborant.png)"
-          ></div>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="15%"
-            style="background-image: url(images/Laborant/04_Laborant.png)"
-          ></div>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="0%"
-            style="background-image: url(images/Laborant/05_Laborant.png)"
-          ></div>
+          <div class="slider-layer s1l3" data-swiper-parallax="20%"></div>
+          <div class="slider-layer s1l4" data-swiper-parallax="15%"></div>
+          <div class="slider-layer s1l5" data-swiper-parallax="0%"></div>
         </div>
         <!-- слайд 2 -->
         <div class="swiper-slide slider__item">
-          <div
-            class="slider-layer"
-            data-swiper-parallax="30%"
-            style="background-image: url(images/Gravi/01_Gravi.jpg)"
-          ></div>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="27%"
-            style="background-image: url(images/Gravi/02_Gravi.png)"
-          ></div>
+          <div class="slider-layer s2l1" data-swiper-parallax="30%"></div>
+          <div class="slider-layer s2l2" data-swiper-parallax="27%"></div>
           <canvas
             class="particles slider-layer"
             data-color="#c8c8c8"
             data-swiper-parallax="24%"
           ></canvas>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="23%"
-            style="background-image: url(images/Gravi/03_Gravi.png)"
-          ></div>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="0%"
-            style="background-image: url(images/Gravi/04_Gravi.png)"
-          ></div>
+          <div class="slider-layer s2l3" data-swiper-parallax="23%"></div>
+          <div class="slider-layer s2l4" data-swiper-parallax="0%"></div>
         </div>
 
         <!-- слайд 3 -->
         <div class="swiper-slide slider__item">
-          <div
-            class="slider-layer"
-            data-swiper-parallax="50%"
-            style="background-image: url(images/Blue/01_Blue.jpg)"
-          ></div>
+          <div class="slider-layer s3l1" data-swiper-parallax="50%"></div>
           <canvas
             class="particles slider-layer"
             data-color="#a31c1c"
             data-swiper-parallax="24%"
           ></canvas>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="20%"
-            style="background-image: url(images/Blue/02_Blue.png)"
-          ></div>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="25%"
-            style="background-image: url(images/Blue/03_Blue.png)"
-          ></div>
-          <div
-            class="slider-layer"
-            data-swiper-parallax="0%"
-            style="background-image: url(images/Blue/04_Blue.png)"
-          ></div>
+          <div class="slider-layer s3l2" data-swiper-parallax="20%"></div>
+          <div class="slider-layer s3l3" data-swiper-parallax="25%"></div>
+          <div class="slider-layer s3l4" data-swiper-parallax="0%"></div>
         </div>
       </div>
     </div>
